tests/NormalTests/paczka1/fuzzy1/73221929.err
Error in line 4: 8ThgQC4 S122 40,2
Error in line 14: S574 A340 48,7
Error in line 13: 6n17sCnk S122 56,8
Error in line 15: S574 S574 58,7
Error in line 23: WIxRDEYwg8X S574 70,1
Error in line 26: WIxRDEYwg8X A340 21,4
Error in line 32: WIxRDEYwg8X S122 390,3
Error in line 38: 7z1sHLUHkp S122 3,6
